# lookover-codex

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  (+2 more)
python/: README.md  pyproject.toml
python/examples/: backend_smoke.py  basic_usage.py  run_agent_specs.py
python/examples/tier1/: Agent01_simple_llm_chain.py  Agent02_prompt_template.py  Agent03_output_parser.py
python/examples/tier2/: Agent04_single_tool.py  Agent05_multi_tool.py  Agent06_rag.py  Agent07_conversational_memory.py  memory.db
python/examples/tier3/: Agent08_langraph_react.py  Agent09_langraph_checkpoint.py  Agent10_human_in_loop.py  Agent11_subgraph.py  checkpoints.db
python/examples/tier4/: Agent13_ hierarchical.py  Agent14_parallel.py  Agent15_collaborative.py  README.md  agent12_supervisor.py
python/lookover_codex_sdk/: __init__.py  _common.py
python/prerun/: __init__.py  catalog.py  cli.py  events.py  models.py  runtime.py  scanner.py
python/tests/: test_lookover_codex_sdk.py
voice-logs-auditor/: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
voice-logs-auditor/app/: config.py  dependencies.py  main.py  models.py
voice-logs-auditor/scripts/: create_synthetic_compliance_dataset.py  ingest_transcripts_to_lookover.py  run_hf_dataset_audit.py  run_random_hf_audit_html_report.py
voice-logs-auditor/static/: styles.css
voice-logs-auditor/templates/: audit_detail.html  audits.html  index.html
voice-logs-auditor/tests/: conftest.py  test_api.py  test_audit_service.py  test_compliance_rules.py  test_hf_dataset_audit_script.py
(+101 files in other folders)
