[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prerun"
version = "0.1.0"
description = "Pre-run scanner and runtime SDK for lookover-codex."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
prerun = "prerun.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["prerun*"]
